Pin the manifest attribute and the arm-arity cap in tests
Three inline tests and the knife's own section in the design doc. The manifest
one needed the text lifted out of write_jar_cp: an attribute a class loader
reads had no other oracle than building a jar and starting a JVM.

§11.9 records the five places the tree won over §11, the sharpest being that a
prompt identity is not enough. A yield that bubbles past an inner activation
freezes that activation's driver mid-run, so nothing pops or re-pushes it, and
the yield has to carry the prompt stack across the freeze itself.